--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 requests
 petl
 python-telegram-bot==20.6
+numpy>=1.26.0
+pandas>=2.2.2
+scikit-learn>=1.5.0
+requests>=2.32.0
+python-dateutil>=2.9.0
+pytz>=2024.1
+joblib>=1.4.0
+
